# biopyc

./: .gitignore  pyproject.toml  setup.cfg
.github/workflows/: python-package.yml
biopyc/image_reader/: __init__.py  _abc_image_reader.py  _dask_uint8_image_reader.py
biopyc/schema/: _create_image_schema.py
tests/image_reader/: test_dask_uint8_image_reader.py
tests/schema/: test_create_image_schema.py
