[tool.poetry]
name = "biopyc"
version = "0.1.0"
description = ""
authors = ["Hugh Warden <hugh.warden@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dask = "^2025.3.0"
dask-image = "^2024.5.3"
scikit-image = "^0.25.2"


[tool.poetry.group.dev.dependencies]
isort = "^6.0.1"
black = "^25.1.0"
mypy = "^1.15.0"
pytest = "^8.3.5"
flake8 = "^7.2.0"
pandas-stubs = "^2.2.3.250308"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
